--- a/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
+++ b/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="UniTask" Version="2.5.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AbsVisitAsync\AbsVisitAsync.csproj" />
   </ItemGroup>
 
