--- a/AbsVisitAsync/AbsVisitAsync.csproj
+++ b/AbsVisitAsync/AbsVisitAsync.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>AbsVisit</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>lino</Authors>
   </PropertyGroup>
 
   <ItemGroup>
