--- a/AbsVisitAsync/AbsVisitAsync.csproj
+++ b/AbsVisitAsync/AbsVisitAsync.csproj
@@ -7,9 +7,9 @@
 
   <PropertyGroup>
     <PackageId>AbsVisit</PackageId>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <PackageTags>Visitor Pattern;Codegen</PackageTags>
-    <Description>Provide general interface IVisitor which will be implemented by codegen.</Description>
+    <Description>Provide general interface IVisitor which will be implemented by other.</Description>
     <RepositoryUrl>https://github.com/ljsnogard/VisitAsync.cs</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Authors>lino</Authors>
