--- a/SampleGenVisit/SampleGenVisit.csproj
+++ b/SampleGenVisit/SampleGenVisit.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AbsVisitAsync\AbsVisitAsync.csproj" />
+  </ItemGroup>
+
 </Project>
