--- a/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
+++ b/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
@@ -8,7 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="UniTask" Version="2.5.10" />
-    <PackageReference Include="AbsVisit" Version="0.1.0" />
+    <!-- <PackageReference Include="AbsVisit" Version="0.2.0" /> -->
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AbsVisitAsync\AbsVisitAsync.csproj" />
   </ItemGroup>
 
 </Project>
