--- a/demo/SampleGenVisit/SampleGenVisit.csproj
+++ b/demo/SampleGenVisit/SampleGenVisit.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AbsVisitAsync\AbsVisitAsync.csproj" />
+    <ProjectReference Include="..\..\src\AbsVisitAsync\AbsVisitAsync.csproj" />
   </ItemGroup>
 
 </Project>
