--- a/src/AbsVisitAsync/AbsVisitAsync.csproj
+++ b/src/AbsVisitAsync/AbsVisitAsync.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="UniTask" Version="2.5.10" />
+    <PackageReference Include="AnyLR" Version="0.1.1" />
   </ItemGroup>
 
 </Project>
