--- a/tests/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
+++ b/tests/TestLibGenVisitAsync/TestLibGenVisitAsync.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="UniTask" Version="2.5.10" />
-    <!-- <PackageReference Include="AbsVisit" Version="0.2.0" /> -->
+    <!-- <PackageReference Include="AbsVisit" Version="0.3.0" /> -->
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AbsVisitAsync\AbsVisitAsync.csproj" />
+    <ProjectReference Include="..\..\src\AbsVisitAsync\AbsVisitAsync.csproj" />
   </ItemGroup>
 
 </Project>
